compiler/testData/diagnostics/tests/backingField/ReadForwardInAnonymous.kt
class ReadForward() {
    constructor {
        val <!UNUSED_VARIABLE!>x<!> = <!UNINITIALIZED_VARIABLE!>$a<!>
    }

    val a = 1
}
